--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.redditinc.com/advertising",
-documentation: "",
+documentation: "https://www.reddithelp.com/en/categories/advertising/creating-ads/conversion-pixel#N6",
 versions:
   sha: 33965518ba17b6b169e0bf3fbc7037315253ee34
   changeNotes: Initial release.
