--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,4 @@
-ghomepage: "https://www.redditinc.com/advertising"
+homepage: "https://www.redditinc.com/advertising"
 documentation: "https://reddit.my.site.com/helpcenter/s/article/Install-the-Reddit-Pixel-on-your-website#GTM"
 versions:
   # Latest Version
